--- a/sass/main.scss
+++ b/sass/main.scss
@@ -3,4 +3,6 @@
 @import "./layout/header";
 @import "./pages/index";
 @import "./utils/variables";
+@import "./utils/mixins";
+@import "./components/buttons";
 
