--- a/sass/pages/_index.scss
+++ b/sass/pages/_index.scss
@@ -1,37 +1,86 @@
-.localisation{
+@import"../utils/variables";
+
+
+.localisation {
     background-color: #f3f3f3;
     text-align: center;
     padding-top: 1rem;
     padding-bottom: 1rem;
-    .localisation_text{
+
+    .localisation_text {
         margin-left: 0.5rem;
         font-weight: 700;
     }
 }
 
-.hero{
+.hero {
     text-align: center;
     padding: 3rem;
     background-color: #fafafa;
-    h2{
+
+    h2 {
         font-weight: 900;
         font-size: 1.5rem;
     }
-    p{
+
+    p {
         opacity: 55%;
         font-weight: 500;
         margin-bottom: 3rem;
     }
-    .hero_btn{
 
-        background: rgb(255,121,218);
-        background: linear-gradient(167deg, rgba(255,121,218,1) 9%, rgba(147,86,220,1) 81%);
-        padding: 1rem;
-        border-radius: 5rem;
+}
+
+/* //! Titre + Reset */
+
+.fonct {
+    margin: 1.5rem;
+
+    h2 {
+        margin-bottom: 1.5rem;
+        font-weight: 900;
+    }
+
+    p {
+        margin: 0;
+    }
+}
+
+/* //! Cards de fonctionnement */
+.fonct_card {
+    display: flex;
+    background-color: #f3f3f3;
+    padding: 1.5rem;
+    margin-bottom: 1rem;
+    border-radius: 1.5rem;
+    box-shadow: 4px 4px 3px 0px rgba(58, 56, 56, 0.1);
+    position: relative;
+
+    .fonct_number {
+        position: absolute;
+        left: -0.7rem;
+        top: 1.2rem;
+        font-size: 0.7rem;
+        background-color: $purple;
+        padding: 0.5rem;
+        text-align: center;
+        line-height: 0.5rem;
+        height: 1.5rem;
+        width: 1.5rem;
+        border-radius: 50%;
         color: white;
-        
-  
-  
+    }
+
+    .fonct_icon {
+        color: grey;
+        margin-right: 1rem;
+        margin-left: 0.75rem;
+        font-weight: 900;
+    }
+
+    .fonct_text {
+        font-weight: 900;
 
     }
+
 }
