--- a/sass/pages/_index.scss
+++ b/sass/pages/_index.scss
@@ -84,3 +84,45 @@
     }
 
 }
+
+/* //! Restaurant */
+
+.resto {
+    padding: 1.5rem;
+    margin-top: 3.5rem;
+    background-color: #f3f3f3;
+
+    .card {
+        border-radius: 25px;
+        overflow: hidden;
+        background-color: white;
+        margin-top: 1.5rem;
+
+        img {
+            object-fit: cover;
+            width: 100%;
+            height: 10rem;
+        }
+
+        h3 {
+            margin-top: 1rem;
+            margin-left: 1rem;
+        }
+
+        .card_text {
+            display: flex;
+            justify-content: space-between;
+            margin-top: 1rem;
+            margin-left: 1rem;
+            margin-right: 1rem;
+            margin-top: -0.5rem;
+            position: relative;
+
+
+            .card_icon {
+                position: absolute;
+                right: 0;
+            }
+        }
+    }
+}
