--- a/sass/pages/_index.scss
+++ b/sass/pages/_index.scss
@@ -122,6 +122,7 @@
             .card_icon {
                 position: absolute;
                 right: 0;
+                background-color: blue;
             }
         }
     }
