--- a/public/css/style.css
+++ b/public/css/style.css
@@ -47,7 +47,7 @@ header h1 {
   padding-top: 1rem;
   padding-bottom: 1rem;
 }
-.localisation .localisation_text {
+.localisation__text {
   margin-left: 0.5rem;
   font-weight: 700;
 }
@@ -80,7 +80,7 @@ header h1 {
 }
 
 /* //! Cards de fonctionnement */
-.fonct_card {
+.fonct-card {
   display: flex;
   background-color: #f3f3f3;
   padding: 1.5rem;
@@ -89,7 +89,7 @@ header h1 {
   box-shadow: 4px 4px 3px 0px rgba(58, 56, 56, 0.1);
   position: relative;
 }
-.fonct_card .fonct_number {
+.fonct-card__number {
   position: absolute;
   left: -0.7rem;
   top: 1.2rem;
@@ -103,13 +103,13 @@ header h1 {
   border-radius: 50%;
   color: white;
 }
-.fonct_card .fonct_icon {
+.fonct-card__icon {
   color: grey;
   margin-right: 1rem;
   margin-left: 0.75rem;
   font-weight: 900;
 }
-.fonct_card .fonct_text {
+.fonct-card__text {
   font-weight: 900;
 }
 
@@ -134,7 +134,7 @@ header h1 {
   margin-top: 1rem;
   margin-left: 1rem;
 }
-.resto .card .card_text {
+.resto .card_text {
   display: flex;
   justify-content: space-between;
   margin-top: 1rem;
@@ -143,9 +143,10 @@ header h1 {
   margin-top: -0.5rem;
   position: relative;
 }
-.resto .card .card_text .card_icon {
+.resto .card_text .card_icon {
   position: absolute;
   right: 0;
+  background-color: blue;
 }
 
 .btn {
