--- a/sass/pages/_index.scss
+++ b/sass/pages/_index.scss
@@ -1,4 +1,3 @@
-@import"../utils/variables";
 
 
 .localisation {
@@ -7,7 +6,7 @@
     padding-top: 1rem;
     padding-bottom: 1rem;
 
-    .localisation_text {
+    &__text {
         margin-left: 0.5rem;
         font-weight: 700;
     }
@@ -47,7 +46,7 @@
 }
 
 /* //! Cards de fonctionnement */
-.fonct_card {
+.fonct-card {
     display: flex;
     background-color: #f3f3f3;
     padding: 1.5rem;
@@ -56,7 +55,7 @@
     box-shadow: 4px 4px 3px 0px rgba(58, 56, 56, 0.1);
     position: relative;
 
-    .fonct_number {
+        &__number {
         position: absolute;
         left: -0.7rem;
         top: 1.2rem;
@@ -71,14 +70,14 @@
         color: white;
     }
 
-    .fonct_icon {
+        &__icon {
         color: grey;
         margin-right: 1rem;
         margin-left: 0.75rem;
         font-weight: 900;
     }
 
-    .fonct_text {
+        &__text {
         font-weight: 900;
 
     }
@@ -109,7 +108,7 @@
             margin-left: 1rem;
         }
 
-        .card_text {
+        &_text {
             display: flex;
             justify-content: space-between;
             margin-top: 1rem;
