--- a/public/css/style.css
+++ b/public/css/style.css
@@ -124,6 +124,7 @@ header h1 {
   overflow: hidden;
   background-color: white;
   margin-top: 1.5rem;
+  position: relative;
 }
 .resto .card img {
   object-fit: cover;
@@ -134,7 +135,18 @@ header h1 {
   margin-top: 1rem;
   margin-left: 1rem;
 }
-.resto .card_text {
+.resto .card__tag {
+  background-color: #99E2D0;
+  position: absolute;
+  top: 5%;
+  right: 1rem;
+  padding: 0.5rem;
+  border-radius: 5%;
+  color: #1b5c4c;
+  font-weight: 700;
+  font-size: 1rem;
+}
+.resto .card__text {
   display: flex;
   justify-content: space-between;
   margin-top: 1rem;
@@ -143,10 +155,11 @@ header h1 {
   margin-top: -0.5rem;
   position: relative;
 }
-.resto .card_text .card_icon {
+.resto .card__icon {
   position: absolute;
   right: 0;
-  background-color: blue;
+  color: gray;
+  bottom: 2rem;
 }
 
 .btn {
