--- a/sass/pages/_index.scss
+++ b/sass/pages/_index.scss
@@ -1,5 +1,3 @@
-
-
 .localisation {
     background-color: #f3f3f3;
     text-align: center;
@@ -55,7 +53,7 @@
     box-shadow: 4px 4px 3px 0px rgba(58, 56, 56, 0.1);
     position: relative;
 
-        &__number {
+    &__number {
         position: absolute;
         left: -0.7rem;
         top: 1.2rem;
@@ -70,14 +68,14 @@
         color: white;
     }
 
-        &__icon {
+    &__icon {
         color: grey;
         margin-right: 1rem;
         margin-left: 0.75rem;
         font-weight: 900;
     }
 
-        &__text {
+    &__text {
         font-weight: 900;
 
     }
@@ -96,6 +94,9 @@
         overflow: hidden;
         background-color: white;
         margin-top: 1.5rem;
+        position: relative;
+
+        
 
         img {
             object-fit: cover;
@@ -108,7 +109,19 @@
             margin-left: 1rem;
         }
 
-        &_text {
+        &__tag {
+            background-color: $green;
+            position: absolute;
+            top: 5%;
+            right: 1rem;
+            padding: 0.5rem;
+            border-radius: 5%;
+            color: #1b5c4c;
+            font-weight: 700;
+            font-size: 1rem;
+        }
+
+        &__text {
             display: flex;
             justify-content: space-between;
             margin-top: 1rem;
@@ -116,13 +129,14 @@
             margin-right: 1rem;
             margin-top: -0.5rem;
             position: relative;
+        }
+        &__icon {
+            position: absolute;
+            right: 0;
+            color: gray;
+            bottom: 2rem;
 
-
-            .card_icon {
-                position: absolute;
-                right: 0;
-                background-color: blue;
-            }
         }
     }
+
 }
