--- a/public/css/style.css
+++ b/public/css/style.css
@@ -171,4 +171,29 @@ header h1 {
   font-weight: 700;
 }
 
+footer {
+  background-color: #302f2f;
+  color: white;
+}
+footer h4 {
+  letter-spacing: 1.5px;
+  font-weight: 400;
+  margin-bottom: 1rem;
+}
+
+.footer-container {
+  padding: 1rem;
+}
+
+.footer__icon {
+  margin-right: 10px;
+}
+.footer__icon--marge {
+  margin-right: 2px;
+}
+.footer__link {
+  color: white;
+  line-height: 2rem;
+}
+
 /*# sourceMappingURL=style.css.map */
