--- a/public/css/style.css
+++ b/public/css/style.css
@@ -29,16 +29,35 @@ body {
   font-family: "Roboto";
 }
 
-header {
+.home-header {
   padding-top: 0.25rem;
   padding-bottom: 0.25rem;
   position: relative;
   z-index: 2;
   box-shadow: 0 0 0.4rem rgba(0, 0, 0, 0.3);
-}
-header h1 {
   text-align: center;
   font-size: 2rem;
+}
+
+/* //? Pages menu */
+.menu-header {
+  padding-top: 1rem;
+  padding-bottom: 0.5rem;
+}
+
+.menu {
+  display: flex;
+  position: relative;
+}
+.menu__arrow {
+  position: absolute;
+  left: 1.5rem;
+  top: 20%;
+  font-size: 1.5rem;
+  opacity: 75%;
+}
+.menu__logo {
+  margin: auto;
 }
 
 .localisation {
@@ -194,6 +213,77 @@ footer h4 {
 .footer__link {
   color: white;
   line-height: 2rem;
+}
+
+.bg-hero {
+  width: 100%;
+  height: 20rem;
+  object-fit: cover;
+}
+
+.main-menu {
+  position: relative;
+  z-index: 2;
+  margin-top: -3rem;
+  border-radius: 2rem 2rem 0 0;
+  background-color: #f6f6f6;
+}
+
+.container-menu {
+  padding: 1.5rem;
+}
+
+.hero-menu {
+  display: flex;
+  justify-content: space-between;
+}
+.hero-menu__titre {
+  font-family: Shrikhand;
+}
+.hero-menu__logo {
+  opacity: 50%;
+  font-size: 1rem;
+  margin-left: 3rem;
+}
+
+.food h3 {
+  margin-top: 2rem;
+  position: relative;
+  text-transform: uppercase;
+  padding-bottom: 5px;
+  width: 45px;
+}
+.food h3::after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  bottom: 0;
+  left: 0;
+  border-bottom: solid 3px #99E2D0;
+}
+.food__card {
+  margin-top: 1rem;
+  padding: 0.75rem;
+  background-color: white;
+  border-radius: 25px;
+}
+.food__titre {
+  font-family: "roboto";
+  font-weight: 700;
+}
+.food__flex {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.food p {
+  margin-top: 8px;
+  margin-bottom: 0px;
+  font-size: 0.8rem;
+}
+.food__price {
+  font-size: 1rem;
+  font-weight: bold;
 }
 
 /*# sourceMappingURL=style.css.map */
