--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,11 +1,36 @@
-header {
+.home-header {
     padding-top: 0.25rem;
     padding-bottom: 0.25rem;
     position: relative;
     z-index: 2;
     box-shadow: 0 0 0.40rem rgb(0 0 0 / 30%);
-    h1 {
-        text-align: center;
-        font-size: 2rem;
+    text-align: center;
+    font-size: 2rem;
+
+}
+
+/* //? Pages menu */
+
+.menu-header {
+    padding-top: 1rem;
+    padding-bottom: 0.5rem;
+
+}
+
+.menu {
+    display: flex;
+    position: relative;
+
+    &__arrow {
+        position: absolute;
+        left: 1.5rem;
+        top: 20%;
+        font-size: 1.5rem;
+        opacity: 75%;
+
+    }
+
+    &__logo {
+        margin: auto;
     }
 }
