--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -1,10 +1,27 @@
-.btn{
-
-    background: rgb(255,121,218);
-    background: linear-gradient(167deg, rgba(255,121,218,1) 9%, rgba(147,86,220,1) 81%);
+.btn {
+    background: rgb(255, 121, 218);
+    background: linear-gradient(167deg, rgba(255, 121, 218, 1) 9%, rgba(147, 86, 220, 1) 81%);
     padding: 1rem;
     border-radius: 5rem;
     color: white;
     font-weight: 700;
-    
+
+}
+.order-wrapper {
+    text-align: center;
+    padding-top: 3rem;
+    padding-bottom: 6rem;
+
+}
+.btn-order {
+    background: rgb(255, 121, 218);
+    background: linear-gradient(167deg, rgba(255, 121, 218, 1) 9%, rgba(147, 86, 220, 1) 81%);
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+    padding-left: 3rem;
+    padding-right: 3rem;
+    border-radius: 5rem;
+    color: white;
+    font-weight: 700;
+
 }
