--- a/sass/main.scss
+++ b/sass/main.scss
@@ -6,4 +6,4 @@
 @import "./utils/mixins";
 @import "./components/buttons";
 @import "./layout/footer";
-@import "./pages/menu-a-la-française";
+@import "./pages/menu";
