--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -31,3 +31,15 @@ footer{
        line-height: 2rem;
     }
 }
+
+@media screen and (min-width: 768px) {
+    .footer-container{
+        text-align: center;
+   }
+}
+
+
+@media screen and (min-width: 1024px)
+{
+
+}
