--- a/sass/pages/_menu.scss
+++ b/sass/pages/_menu.scss
@@ -80,3 +80,43 @@
     }
 
 }
+
+
+@media screen and (min-width: 768px) {
+    .container-menu {
+        max-width: 70%;
+        margin-left: auto;
+        margin-right: auto;
+
+    }
+
+    .bg-hero {
+        width: 100%;
+        height: 30rem;
+        object-fit: cover;
+    }
+
+    .flex-menu {
+        display: flex;
+        align-items: center;
+        flex-wrap: wrap;
+        
+    }
+
+    .food {
+        &__card {
+            
+            min-width: 20rem;
+            margin-right: 2rem;
+
+
+        }
+
+        p {
+            font-size: 14px;
+        }
+
+    }
+
+
+}
