--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,5 +1,7 @@
 @import "./utils/variables";
+@import "./components/loading";
 @import "./base/base";
+@import "./components/heart";
 @import "./base/typography";
 @import "./layout/header";
 @import "./pages/index";
