--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,51 @@
+.loader {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  background-color: #302f2f;
+  z-index: 9999;
+  animation: stop-spinner 3s both ease-in-out;
+}
+
+.fork {
+  position: absolute;
+  top: 40vh;
+  left: 45vw;
+  font-size: 10rem;
+  animation: fork-animation 3s both;
+}
+
+@keyframes fork-animation {
+  0% {
+    transform: rotate(0);
+    animation-timing-function: cubic-bezier(0.55, 0.055, 0.675, 0.19);
+    color: #99E2D0;
+    transform: scale(2);
+  }
+  50% {
+    transform: rotate(900deg);
+    animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
+    color: #FF79DA;
+  }
+  100% {
+    transform: rotate(1800deg);
+    color: #9356DC;
+  }
+}
+@keyframes stop-spinner {
+  0% {
+    opacity: 95%;
+  }
+  90% {
+    background-color: #302f2f;
+    opacity: 95%;
+  }
+  100% {
+    background-color: transparent;
+    opacity: 0%;
+    pointer-events: none;
+  }
+}
 * {
   box-sizing: border-box;
 }
@@ -21,6 +69,34 @@ ul {
   padding: 0px;
 }
 
+.heart {
+  fill: none;
+  stroke: rgba(0, 0, 0, 0.8);
+  stroke-width: 3rem;
+  width: 3rem;
+}
+.heart:hover {
+  cursor: pointer;
+  animation: heart-color 1s both;
+  stroke: none;
+}
+
+@keyframes heart-color {
+  0% {
+    transform: scale(0.8);
+    opacity: 30%;
+  }
+  50% {
+    transform: scale(0.8);
+    opacity: 50%;
+    fill: #9356DC;
+  }
+  100% {
+    transform: scale(1.2);
+    opacity: 100%;
+    fill: #FF79DA;
+  }
+}
 h1, h4, h5, h6 {
   font-family: Shrikhand;
 }
@@ -220,6 +296,12 @@ body {
   border-radius: 5rem;
   color: white;
   font-weight: 700;
+  box-shadow: 0.25rem 0.25rem 10px rgba(0, 0, 0, 0.15);
+  transition: 0.5s;
+}
+.btn:hover {
+  box-shadow: 0.25rem 0.25rem 10px rgba(0, 0, 0, 0.45);
+  opacity: 80%;
 }
 
 .order-wrapper {
@@ -238,6 +320,11 @@ body {
   border-radius: 5rem;
   color: white;
   font-weight: 700;
+  transition: 0.5s;
+}
+.btn-order:hover {
+  box-shadow: 0.25rem 0.25rem 10px rgba(0, 0, 0, 0.45);
+  opacity: 80%;
 }
 
 footer {
@@ -341,6 +428,27 @@ footer h4 {
   font-weight: bold;
 }
 
+/* //! Boucle apparation menu  */
+.food_1 {
+  animation: opacity-menu 0.5s 1s ease-in-out both;
+}
+
+.food_2 {
+  animation: opacity-menu 0.5s 2s ease-in-out both;
+}
+
+.food_3 {
+  animation: opacity-menu 0.5s 3s ease-in-out both;
+}
+
+@keyframes opacity-menu {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
 @media screen and (min-width: 768px) {
   .container-menu {
     max-width: 70%;
