--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -5,14 +5,25 @@
     border-radius: 5rem;
     color: white;
     font-weight: 700;
+    box-shadow: 0.25rem 0.25rem 10px rgb(0 0 0 / 15%);
+    transition: 0.5s;
+
+
+    &:hover {
+        box-shadow: 0.25rem 0.25rem 10px rgb(0 0 0 / 45%);
+        opacity: 80%;
+
+    }
 
 }
+
 .order-wrapper {
     text-align: center;
     padding-top: 3rem;
     padding-bottom: 6rem;
 
 }
+
 .btn-order {
     background: rgb(255, 121, 218);
     background: linear-gradient(167deg, rgba(255, 121, 218, 1) 9%, rgba(147, 86, 220, 1) 81%);
@@ -23,5 +34,13 @@
     border-radius: 5rem;
     color: white;
     font-weight: 700;
+    transition: 0.5s;
+
+    &:hover {
+        box-shadow: 0.25rem 0.25rem 10px rgb(0 0 0 / 45%);
+        opacity: 80%;
+
+    }
 
 }
+
