--- a/sass/pages/_menu.scss
+++ b/sass/pages/_menu.scss
@@ -81,6 +81,27 @@
 
 }
 
+/* //! Boucle apparation menu  */
+
+@for $i from 1 through 3 {
+    .food_#{$i}
+    {
+        animation: opacity-menu  0.5s #{$i}s ease-in-out both ;
+    }
+}
+
+@keyframes opacity-menu {
+    0% {
+        opacity: 0;
+    }
+
+    100% {
+        opacity: 1;
+    }
+}
+    
+
+
 
 @media screen and (min-width: 768px) {
     .container-menu {
