--- a/public/css/style.css
+++ b/public/css/style.css
@@ -404,10 +404,24 @@ footer h4 {
   border-bottom: solid 3px #99E2D0;
 }
 .food__card {
+  position: relative;
   margin-top: 1rem;
   padding: 0.75rem;
   background-color: white;
   border-radius: 25px;
+  transition: 0.2s ease-in-out;
+  text-overflow: ellipsis;
+}
+.food__card:hover {
+  padding-right: 5rem;
+}
+.food__card:hover .wrapper_check {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.food__card:hover .fa-check-circle {
+  animation: check-animation 0.5s;
 }
 .food__titre {
   font-family: "roboto";
@@ -428,6 +442,36 @@ footer h4 {
   font-weight: bold;
 }
 
+.wrapper_check {
+  display: none;
+  position: absolute;
+  right: 0;
+  top: 0;
+  width: 50px;
+  margin-left: 50px;
+  text-align: center;
+  height: 100%;
+  background-color: #99E2D0;
+  transition: 1s ease-in-out;
+  border-radius: 0 25px 25px 0px;
+}
+
+.fa-check-circle {
+  transition: 1s ease-in-out;
+  color: white;
+}
+
+@keyframes check-animation {
+  0% {
+    transform: rotate(0);
+  }
+  50% {
+    transform: rotate(180deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
 /* //! Boucle apparation menu  */
 .food_1 {
   animation: opacity-menu 0.5s 1s ease-in-out both;
